--- a/css/style.css
+++ b/css/style.css
@@ -512,9 +512,9 @@ display: inline;
 /* Chat containers */
 ------------------------
 .container {
-    border: 2px solid #dedede;
+    border: 2px rounded corners #dedede;
     background-color: #f1f1f1;
-    border-radius: 5px;
+    border-radius: 25px;
     padding: 10px;
     margin: 10px 0;
 }
