--- a/css/style.css
+++ b/css/style.css
@@ -447,35 +447,32 @@ display: inline;
 /* Twitter */
 .fa-twitter {
     background: #55ACEE;
-    color: white;
-  
+    color: white;  
 }
 
 /* Google+ */
 .fa-plus-google {
     background: #dd4b39;
     color: white;
-
 }
 
 /* LinkedIn */
 .fa-linkedin {
     background: #55ACEE;
-    color: white;
-  
+    color: white; 
 }
 
 /* Instagram */
 .fa-instagram {
     background: #3B5998;
-    color: white;
-  
+    color: white;  
 }
 
 /* Wordpress */
 .fa-wordpress {
     background: #55ACEE;
     color: white;
+}
 
 /** Social Button CSS **/
 
