--- a/css/style.css
+++ b/css/style.css
@@ -454,6 +454,7 @@ display: inline;
 .fa-plus-google {
     background: #dd4b39;
     color: white;
+  
 }
 
 /* LinkedIn */
@@ -470,7 +471,7 @@ display: inline;
 
 /* Wordpress */
 .fa-wordpress {
-    background: #55ACEE;
+    background: #3B5998;
     color: white;
 }
 
